--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "require": {
         "php": "^7.1.3",
         "cviebrock/eloquent-sluggable": "^4.8",
+        "doctrine/dbal": "^2.9",
         "fideloper/proxy": "^4.0",
         "jeroennoten/laravel-adminlte": "^1.27",
         "laravel/framework": "5.8.*",
